--- a/src/components/UI/Screen.module.css
+++ b/src/components/UI/Screen.module.css
@@ -1,4 +1,7 @@
 .container {
+    position: fixed;
+    height: 100%;
+    width: 100%;
     z-index: 2;
     display: flex;
     flex-grow: 1;
